# shaderlab

./: Cargo.toml  README.md  bootstrap.sh  flake.nix  index.html
src/: lib.rs  main.rs
src/program/: mod.rs
src/shader/: frag.rs  mod.rs  trait.rs  vert.rs
src/shaders/: frag.glsl  vert.glsl
